<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="#FFF4CC"
    android:padding="5dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="94dp"
        android:layout_height="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medication" />

    <EditText
        android:id="@+id/tvMedicineName"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="121dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tv_medicine_name"
        android:inputType="none"
        android:paddingStart="10px"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvMedicationAmount"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="121dp"
        android:layout_height="36dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tv_medication_amount"
        android:inputType="none"
        android:paddingStart="10px"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.006"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tvMedicineName" />

    <EditText
        android:id="@+id/tvMedicationType"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="121dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tv_medication_type"
        android:inputType="none"
        android:paddingStart="10px"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toEndOf="@+id/tvMedicineName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/tvMedicationTime"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="121dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/tv_medication_time"
        android:inputType="none"
        android:paddingStart="10px"
        android:singleLine="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toEndOf="@+id/tvMedicationAmount"
        app:layout_constraintTop_toBottomOf="@+id/tvMedicationType" />

    <TextView
        android:id="@+id/tvMedicationId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:clickable="false"
        android:editable="false"
        android:enabled="false"
        android:focusable="false"
        android:inputType="none"
        android:text="TextView"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivDeleteMedication"
        android:layout_width="21dp"
        android:layout_height="17dp"
        android:layout_marginEnd="380dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/times" />

</androidx.constraintlayout.widget.ConstraintLayout>